Added attacking and the actual text console.

--- a/rouge/index.html
+++ b/rouge/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="game.css" type="text/css" />
     <script src="rot.js"></script>
     <script src="phaser.js"></script>
+    <script src="parallel.js"></script>
     <script src="game.js"></script>
 </head>
 <body>
