--- a/rouge/index.html
+++ b/rouge/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>TypeScript HTML App</title>
+    <title>Sheol</title>
     <link rel="stylesheet" href="game.css" type="text/css" />
     <script src="rot.js"></script>
     <script src="phaser.js"></script>
